# that_template_repo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.task/checksum/: coverage  format  lint  lock  setup-deps  test
docs/: ai_assisted_setup.md  configuration.md  index.md  installation.md  usage.md
docs/guides/: development_troubleshooting.md  manual_setup.md  releasing_and_versioning.md  security_and_secrets.md
docs/template_docs/: configuration.md  design_philosophy.md  index.md
docs/template_docs/guides/: container_registry.md  releasing_and_versioning.md  security_and_secrets.md
examples/: cli.py  data_pipeline.py
examples/web/: __init__.py  config.py  logging_config.py  main.py
scripts/: confirm_bump.sh
src/your_core_library/: __init__.py  data_handler.py
tests/examples/cli/: test_cli.py
tests/examples/data_pipeline/: test_data_pipeline.py
tests/examples/web/: test_main_app.py
tests/your_core_library/: __init__.py  test_data_handler.py
